objects/AcctSeedERP__Shipment__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Packing_Slip_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packing Slip Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Billing_Format__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Packing Slip</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing_Format__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>AcctSeedERP__Sales_Order__c</referenceTo>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipment_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Comment__c</fullName>
        <label>Shipping Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Shipping_Reference__c</fullName>
        <label>Shipping Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>AcctSeedERP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Status_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(AcctSeedERP__Status__c))</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Status__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>